force-app/main/default/objects/FIN_InvoiceSchedule__c/FIN_InvoiceSchedule__c.object-meta.xml
<CustomObject>
    <label>Invoice Schedule</label>
    <nameField>
        <displayFormat>IS-{0000000000}</displayFormat>
        <label>Invoice Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>