force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_AccumulationSubtotal__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccumulationSubtotal__c</fullName>
    <formula>if (FIN_CountIIwithAppliedAccum__c!=0,
IF (TEXT(FIN_Mode__c)  = &apos;ByAmount&apos;,
FIN_TotalAdjustmentsAmountRevenue__c +  FIN_TotalNotAdjustmentsAmountRevenue__c, 
				 FIN_TotalAdjustmentsAmountQty__c + FIN_TotalNotAdjustmentsAmountQty__c
			),
				0				
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulation Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>