force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_AdjustmentDifferenceRevenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustmentDifferenceRevenue__c</fullName>
    <formula>IF (FIN_AccumulationSubtotal__c != 0, FIN_AccumulationSubtotal__c - FIN_InvoiceTotal__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulation Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>