force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_BaseRateUnitCost__c.field-meta.xml
<CustomField>
    <fullName>FIN_BaseRateUnitCost__c</fullName>
    <formula>IF (FIN_Contract__r.FIN_BaseRate_UnitCost__c != 0,
FIN_Contract__r.FIN_BaseRate_UnitCost__c,
IF ( FIN_Contract__r.FIN_ParentContract__r.FIN_BaseRate_UnitCost__c != 0,
FIN_Contract__r.FIN_ParentContract__r.FIN_BaseRate_UnitCost__c,
1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>