force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_CountIIwithAppliedAccum__c.field-meta.xml
<CustomField>
    <fullName>FIN_CountIIwithAppliedAccum__c</fullName>
    <label>Count II with Applied Accum</label>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_Applied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>