force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_CustomerPO__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerPO__c</fullName>
    <label>Customer PO#</label>
    <length>250</length>
    <type>Text</type>
</CustomField>