force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>