force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceFrequency__c</fullName>
    <formula>TEXT(FIN_Contract__r.FIN_Invoice_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Frequency</label>
    <type>Text</type>
</CustomField>