force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_InvoiceRate__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceRate__c</fullName>
    <formula>IF (FIN_Contract__r.FIN_InvoiceRate_del__c != 0,
    FIN_Contract__r.FIN_InvoiceRate_del__c,
			 IF (FIN_Contract__r.FIN_ParentContract__r.FIN_InvoiceRate_del__c != 0,
        FIN_Contract__r.FIN_ParentContract__r.FIN_InvoiceRate_del__c,
								100)
			 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Invoice Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>