force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_InvoiceRemark__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceRemark__c</fullName>
    <label>Invoice Remark</label>
    <length>250</length>
    <type>Text</type>
</CustomField>