force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_InvoiceTotal__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceTotal__c</fullName>
    <formula>IF (FIN_Contract__r.FIN_Jurisdiction_Tax_Rates__c!=null,
FIN_Subtotal__c + FIN_Subtotal__c * FIN_Contract__r.FIN_Jurisdiction_Tax_Rates__r.Tax_Rate__c ,
				IF (FIN_Contract__r.FIN_ParentContract__r.FIN_Jurisdiction_Tax_Rates__c!=null,
        FIN_Subtotal__c + FIN_Subtotal__c * FIN_Contract__r.FIN_ParentContract__r.FIN_Jurisdiction_Tax_Rates__r.Tax_Rate__c ,
								FIN_Subtotal__c
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>