force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_LessCredits__c.field-meta.xml
<CustomField>
    <fullName>FIN_LessCredits__c</fullName>
    <formula>IF (TEXT(FIN_Mode__c) = &apos;ByAmount&apos;, FIN_TotalInvoiceManualAmountRevenue__c, FIN_TotalInvoiceManualAmountQty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Less: Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>