force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_Mode__c.field-meta.xml
<CustomField>
    <fullName>FIN_Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ByAmount</fullName>
                <default>true</default>
                <label>By Amount</label>
            </value>
            <value>
                <fullName>ByTicketQuantity</fullName>
                <label>By Ticket Quantity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>