force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_NetDue__c.field-meta.xml
<CustomField>
    <fullName>FIN_NetDue__c</fullName>
    <formula>FIN_InvoiceTotal__c +  FIN_LessCredits__c +  FIN_AdjustmentDifferenceRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>