force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_PublishDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_PublishDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>