force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_SalesTax__c.field-meta.xml
<CustomField>
    <fullName>FIN_SalesTax__c</fullName>
    <formula>IF (FIN_Contract__r.FIN_Jurisdiction_Tax_Rates__c!=null,
FIN_Contract__r.FIN_Jurisdiction_Tax_Rates__r.Tax_Rate__c ,
IF (FIN_Contract__r.FIN_ParentContract__r.FIN_Jurisdiction_Tax_Rates__c!=null,
FIN_Contract__r.FIN_ParentContract__r.FIN_Jurisdiction_Tax_Rates__r.Tax_Rate__c ,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>