force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_SettlementSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Schedule</label>
    <referenceTo>FIN_SettlementSchedule__c</referenceTo>
    <relationshipLabel>Invoice Schedules</relationshipLabel>
    <relationshipName>Invoice_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>