force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>FIN_Subtotal__c</fullName>
    <formula>IF (TEXT(FIN_Mode__c) = &apos;ByTicketQuantity&apos;, FIN_BaseRateUnitCost__c * FIN_TotalQuantity__c,
 FIN_TotalInvoiceRegularAmountRevenue__c * FIN_InvoiceRate__c   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>