force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_Terms__c.field-meta.xml
<CustomField>
    <fullName>FIN_Terms__c</fullName>
    <label>Terms</label>
    <length>250</length>
    <type>Text</type>
</CustomField>