force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_TotalAdjustmentsAmountQty__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalAdjustmentsAmountQty__c</fullName>
    <label>Total Adjustments Amount Qty</label>
    <summarizedField>FIN_InvoiceItem__c.FIN_TotalAmountbyQty__c</summarizedField>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_EntryType__c</field>
        <operation>equals</operation>
        <value>Standard Entry</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>II SalesTransactions Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>