force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_TotalAdjustmentsAmountRevenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalAdjustmentsAmountRevenue__c</fullName>
    <description>for invoice by revenue (amount after adjustments)</description>
    <label>Total Adjustments Amount Revenue</label>
    <summarizedField>FIN_InvoiceItem__c.FIN_AdjustmentforInvoice__c</summarizedField>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_EntryType__c</field>
        <operation>equals</operation>
        <value>Standard Entry</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>II PDs Record Type, II Payments Record Type, II SalesTransactions Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>