force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_TotalInvoiceManualAmountQty__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalInvoiceManualAmountQty__c</fullName>
    <label>Less: Credits (Qty)</label>
    <summarizedField>FIN_InvoiceItem__c.FIN_ManualAmount__c</summarizedField>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_EntryType__c</field>
        <operation>equals</operation>
        <value>Manual Adjustment</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>