force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_TotalNotAdjustmentsAmountRevenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalNotAdjustmentsAmountRevenue__c</fullName>
    <label>Total Not Adjustments Amount Revenue</label>
    <summarizedField>FIN_InvoiceItem__c.FIN_TotalNetAmountforInvoice__c</summarizedField>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_EntryType__c</field>
        <operation>equals</operation>
        <value>Standard Entry</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FIN_InvoiceItem__c.FIN_Applied__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>