force-app/main/default/objects/FIN_InvoiceSchedule__c/fields/FIN_TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <summarizedField>FIN_InvoiceItem__c.FIN_QuantityforInvoiceQty__c</summarizedField>
    <summaryForeignKey>FIN_InvoiceItem__c.FIN_ParentInvoiceSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>