force-app/main/default/objects/FIN_InvoiceSchedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Contract__c</columns>
    <columns>FIN_Description__c</columns>
    <columns>FIN_InvoiceRemark__c</columns>
    <columns>FIN_Type__c</columns>
    <columns>FIN_ApplyAccumulators__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FIN_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>