force-app/main/default/objects/FIN_InvoiceSchedule__c/listViews/FIN_Invoice_Approval_FIN_InvoiceSchedule1.listView-meta.xml
<ListView>
    <fullName>FIN_Invoice_Approval_FIN_InvoiceSchedule1</fullName>
    <filterScope>Queue</filterScope>
    <label>Invoice Approval</label>
    <queue>FIN_Invoice_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>