force-app/main/default/objects/FIN_InvoiceSchedule__c/listViews/FIN_Invoice_Review_FIN_InvoiceSchedule.listView-meta.xml
<ListView>
    <fullName>FIN_Invoice_Review_FIN_InvoiceSchedule</fullName>
    <filterScope>Queue</filterScope>
    <label>Invoice Review</label>
    <queue>FIN_Invoice_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>