force-app/main/default/objects/FIN_InvoiceSchedule__c/listViews/Invoices_Not_Settled.listView-meta.xml
<ListView>
    <fullName>Invoices_Not_Settled</fullName>
    <columns>NAME</columns>
    <columns>FIN_InvoiceDate__c</columns>
    <columns>FIN_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>FIN_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_SettlementSchedule__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>FIN_Status__c</field>
        <operation>notEqual</operation>
        <value>Void</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_InvoiceSchedule__c.Master</value>
    </filters>
    <label>Invoices Not Settled</label>
</ListView>